# ai-training-dataset

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
dataset/: __init__.py
dataset/eval/: __init__.py  baseline_comparison.py  bias_measurement.py  cli.py  eval_suite.py
dataset/formatting/: __init__.py  alpaca_format.py  cli.py  dedup.py  hf_dataset.py  quality_filter.py  sharegpt_format.py
dataset/generators/: __init__.py  base.py  cli.py  ethical_reasoning.py  euphemism_correction.py  industry_facts.py  moral_consistency.py  nutrition_accuracy.py  sentience_science.py
dataset/hf/: __init__.py  dataset_card.md  model_card.md  upload.py
tests/: test_eval.py  test_formatting.py  test_generators.py
training/: __init__.py  config.yml  finetune_llama.py  finetune_mistral.py  merge_and_push.py
